# rtabmap

./: CMakeLists.txt
corelib/include/rtabmap/core/: AngleSift.hpp  Features2d.h  Memory.h  Parameters.h  Rtabmap.h  SiftDescriptor.hpp  VWDictionary.h  mpeg7.hpp
corelib/src/: CMakeLists.txt  Features2d.cpp  Memory.cpp  Rtabmap.cpp  VWDictionary.cpp
mpeg7/: CMakeLists.txt  Feature.cpp  Feature.h  Frame.cpp  Frame.h
mpeg7/Extraction/: ColorStructureExtraction.cpp  DominantColorExtraction.cpp  DominantColorExtraction.h  FaceRecognitionExtraction.cpp  FaceRecognitionExtraction.h
tools/: CMakeLists.txt
tools/ConsoleApp/: CMakeLists.txt  main.cpp
utilite/include/rtabmap/utilite/: UConversion.h
utilite/src/: UConversion.cpp
